--- a/BuildVersion/BuildVersion.csproj
+++ b/BuildVersion/BuildVersion.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <UsingTask TaskName="GetCurrentBuildVersion" AssemblyFile="..\BuildVersion.dll" />
+  <UsingTask TaskName="GetCurrentBuildVersion" AssemblyFile="..\Universe.BuildVersion.dll" />
   <Target Name="BeforeBuildActionsProject1" BeforeTargets="BeforeBuild">
     <GetCurrentBuildVersion BaseVersion="$(FileVersion)">
       <Output TaskParameter="Version" PropertyName="FileVersion" />
@@ -15,10 +15,14 @@
     <Nullable>enable</Nullable>
     <LangVersion>8.0</LangVersion>
     <WarningsAsErrors>CS8600;CS8602;CS8603;CS8625;CS8604</WarningsAsErrors>
+    <RootNamespace>Universe.BuildVersion</RootNamespace>
+    <AssemblyName>Universe.BuildVersion</AssemblyName>
+    <AssemblyVersion>1.2.0.0</AssemblyVersion>
+    <FileVersion>1.2.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Build.Utilities.Core" Version="16.0.461" />
+    <PackageReference Include="Microsoft.Build.Utilities.Core" Version="16.5.0" />
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
