--- a/BuildVersion/BuildVersion.csproj
+++ b/BuildVersion/BuildVersion.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="xcopy /y $(TargetPath) $(ProjectDir)..\..\Publish\" />
+    <Exec Command="xcopy /y $(TargetPath) $(ProjectDir)..\Publish\" />
   </Target>
 
 </Project>
