--- a/BuildVersion/BuildVersion.csproj
+++ b/BuildVersion/BuildVersion.csproj
@@ -1,32 +1,43 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <UsingTask TaskName="GetCurrentBuildVersion" AssemblyFile="..\Universe.BuildVersion.dll" />
-  <Target Name="BeforeBuildActionsProject1" BeforeTargets="BeforeBuild">
-    <GetCurrentBuildVersion BaseVersion="$(FileVersion)">
-      <Output TaskParameter="Version" PropertyName="FileVersion" />
-    </GetCurrentBuildVersion>
-    <PropertyGroup>
-      <AssemblyVersion>$(FileVersion)</AssemblyVersion>
-    </PropertyGroup>
-  </Target>
-
   <PropertyGroup>
+    <Version>1.3</Version>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <LangVersion>8.0</LangVersion>
-    <WarningsAsErrors>CS8600;CS8602;CS8603;CS8625;CS8604</WarningsAsErrors>
     <RootNamespace>Universe.BuildVersion</RootNamespace>
     <AssemblyName>Universe.BuildVersion</AssemblyName>
-    <AssemblyVersion>1.2.0.0</AssemblyVersion>
-    <FileVersion>1.2.0.0</FileVersion>
+    <AssemblyVersion>$(Version)</AssemblyVersion>
+    <FileVersion>$(Version)</FileVersion>
+    <OutputType>Library</OutputType>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <LangVersion>9.0</LangVersion>
+    <Nullable>enable</Nullable>
+    <WarningsAsErrors>CS8600;CS8602;CS8603;CS8625;CS8604</WarningsAsErrors>
+  </PropertyGroup>
+
+  <PropertyGroup>
+    <Company>UniverseSoft</Company>
+    <Product>Universe.BuildVersion</Product>
+    <Authors>UniverseSoft</Authors>
+    <Description>BuildVersion library</Description>
+    <Copyright>Copyright (c) 2021 UniverseSoft</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Build.Utilities.Core" Version="16.5.0" />
+    <PackageReference Include="Microsoft.Build.Utilities.Core" Version="17.1.0" />
   </ItemGroup>
 
-  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+  <!--<Target Name="PostBuild" AfterTargets="PostBuildEvent">
     <Exec Command="xcopy /y $(TargetPath) $(ProjectDir)..\Publish\" />
+  </Target>-->
+
+  <Target Name="CopyTargetToPublish" AfterTargets="PostBuildEvent">
+    <Copy SourceFiles="$(TargetPath)" DestinationFolder="$(SolutionDir)Publish\">
+      <Output TaskParameter="CopiedFiles" ItemName="Copied" />
+    </Copy>
+    <Message Text="$(TargetFileName) -&gt; @(Copied)" Importance="high" />
   </Target>
 
 </Project>
