--- a/BuildVersion/BuildVersion.csproj
+++ b/BuildVersion/BuildVersion.csproj
@@ -1,43 +1,63 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <Version>1.3</Version>
-    <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>Universe.BuildVersion</RootNamespace>
-    <AssemblyName>Universe.BuildVersion</AssemblyName>
-    <AssemblyVersion>$(Version)</AssemblyVersion>
-    <FileVersion>$(Version)</FileVersion>
-    <OutputType>Library</OutputType>
-  </PropertyGroup>
+	<PropertyGroup>
+		<Version>1.20</Version>
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<!--<TargetFramework>net6</TargetFramework>-->
+		<RootNamespace>Jdt.Version</RootNamespace>
+		<AssemblyName>Jdt.Version</AssemblyName>
+		<AssemblyVersion>$(Version)</AssemblyVersion>
+		<FileVersion>$(Version)</FileVersion>
+		<OutputType>Library</OutputType>
 
-  <PropertyGroup>
-    <LangVersion>9.0</LangVersion>
-    <Nullable>enable</Nullable>
-    <WarningsAsErrors>CS8600;CS8602;CS8603;CS8625;CS8604</WarningsAsErrors>
-  </PropertyGroup>
+		<!--<PublishSingleFile>true</PublishSingleFile>-->
+		<!--<SelfContained>false</SelfContained>-->
+		<!--<RuntimeIdentifier>win-x64</RuntimeIdentifier>-->
+		<!--<PublishReadyToRun>true</PublishReadyToRun>-->
 
-  <PropertyGroup>
-    <Company>UniverseSoft</Company>
-    <Product>Universe.BuildVersion</Product>
-    <Authors>UniverseSoft</Authors>
-    <Description>BuildVersion library</Description>
-    <Copyright>Copyright (c) 2021 UniverseSoft</Copyright>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-  </PropertyGroup>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.Build.Utilities.Core" Version="17.1.0" />
-  </ItemGroup>
+	<PropertyGroup>
+		<LangVersion>9.0</LangVersion>
+		<Nullable>enable</Nullable>
+		<WarningsAsErrors>CS8600;CS8602;CS8603;CS8625;CS8604</WarningsAsErrors>
+	</PropertyGroup>
 
-  <!--<Target Name="PostBuild" AfterTargets="PostBuildEvent">
+	<PropertyGroup>
+		<Company>UniverseSoft</Company>
+		<Product>Universe.BuildVersion</Product>
+		<Authors>UniverseSoft</Authors>
+		<Description>BuildVersion library</Description>
+		<Copyright>Copyright (c) 2021 UniverseSoft</Copyright>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<PackageReference Include="ILRepack.Lib.MSBuild.Task" Version="2.0.18.2" />
+		<PackageReference Include="Microsoft.Build.Utilities.Core" Version="17.2.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Reference Include="NodaTime">
+	    <HintPath>..\lib\NodaTime.dll</HintPath>
+	    <Private>True</Private>
+	  </Reference>
+	  <Reference Include="NodaTime.Testing">
+	    <HintPath>..\lib\NodaTime.Testing.dll</HintPath>
+	    <Private>True</Private>
+	  </Reference>
+	</ItemGroup>
+
+	<!--<Target Name="PostBuild" AfterTargets="PostBuildEvent">
     <Exec Command="xcopy /y $(TargetPath) $(ProjectDir)..\Publish\" />
   </Target>-->
 
-  <Target Name="CopyTargetToPublish" AfterTargets="PostBuildEvent">
-    <Copy SourceFiles="$(TargetPath)" DestinationFolder="$(SolutionDir)Publish\">
-      <Output TaskParameter="CopiedFiles" ItemName="Copied" />
-    </Copy>
-    <Message Text="$(TargetFileName) -&gt; @(Copied)" Importance="high" />
-  </Target>
+	<!--<Target Name="CopyTargetToPublish" AfterTargets="PostBuildEvent">-->
+	<Target Name="CopyTargetToPublish" AfterTargets="ILRepack">
+		<Copy SourceFiles="$(TargetPath)" DestinationFolder="$(SolutionDir)Publish\">
+			<Output TaskParameter="CopiedFiles" ItemName="Copied" />
+		</Copy>
+		<Message Text="$(TargetFileName) -&gt; @(Copied)" Importance="high" />
+	</Target>
 
 </Project>
