--- a/BuildVersion/BuildVersion.csproj
+++ b/BuildVersion/BuildVersion.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<Version>1.20</Version>
+		<Version>2.0</Version>
 		<TargetFramework>netstandard2.0</TargetFramework>
 		<!--<TargetFramework>net6</TargetFramework>-->
-		<RootNamespace>Jdt.Version</RootNamespace>
-		<AssemblyName>Jdt.Version</AssemblyName>
+		<RootNamespace>Universe.Version</RootNamespace>
+		<AssemblyName>Universe.Version</AssemblyName>
 		<AssemblyVersion>$(Version)</AssemblyVersion>
 		<FileVersion>$(Version)</FileVersion>
 		<OutputType>Library</OutputType>
