--- a/BuildVersion/BuildVersion.csproj
+++ b/BuildVersion/BuildVersion.csproj
@@ -2,10 +2,10 @@
 
 	<PropertyGroup>
 		<Version>2.5</Version>
-		<TargetFramework>netstandard2.0</TargetFramework>
-		<!--<TargetFramework>net6</TargetFramework>-->
+		<!--<TargetFramework>netstandard2.0</TargetFramework>-->
+		<TargetFramework>net6.0</TargetFramework>
 		<RootNamespace>Universe.Version</RootNamespace>
-		<AssemblyName>Universe.Version</AssemblyName>
+		<AssemblyName>$(RootNamespace)</AssemblyName>
 		<AssemblyVersion>$(Version)</AssemblyVersion>
 		<FileVersion>$(Version)</FileVersion>
 		<OutputType>Library</OutputType>
