--- a/Version/Universe.Version.csproj
+++ b/Version/Universe.Version.csproj
@@ -1,19 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<Version>2.5</Version>
-		<!--<TargetFramework>netstandard2.0</TargetFramework>-->
-		<TargetFramework>net6.0</TargetFramework>
+		<Version>2.6</Version>
+		<TargetFramework>net4.8</TargetFramework>
+		<PlatformTarget>AnyCPU</PlatformTarget>
+		<OutputPath>bin\$(Configuration)\$(PlatformTarget)\</OutputPath>
+
+		<!--<TargetFramework>net6.0</TargetFramework>-->
 		<RootNamespace>Universe.Version</RootNamespace>
 		<AssemblyName>$(RootNamespace)</AssemblyName>
-		<AssemblyVersion>$(Version)</AssemblyVersion>
-		<FileVersion>$(Version)</FileVersion>
-		<OutputType>Library</OutputType>
+		<!--<OutputType>Library</OutputType>-->
 
+		<AssemblyVersin>$(Version)</AssemblyVersin>
+		<FileVersin>$(Version)</FileVersin>
 		<!--<PublishSingleFile>true</PublishSingleFile>-->
 		<!--<SelfContained>false</SelfContained>-->
 		<!--<RuntimeIdentifier>win-x64</RuntimeIdentifier>-->
 		<!--<PublishReadyToRun>true</PublishReadyToRun>-->
+		<GenerateAssemblyInfo>true</GenerateAssemblyInfo>
+		<Deterministic>true</Deterministic>
 
 	</PropertyGroup>
 
@@ -30,13 +35,14 @@
 		<Description>Version library</Description>
 		<Copyright>Copyright (c) 2021 UniverseSoft</Copyright>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<ProduceReferenceAssembly>False</ProduceReferenceAssembly>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Build.Utilities.Core" Version="17.2.0" />
 		<PackageReference Include="ILRepack.Lib.MSBuild.Task" Version="2.0.18.2" />
 		<PackageReference Include="NodaTime" Version="3.1.0" />
-		<PackageReference Include="NodaTime.Testing" Version="3.1.0" />
+		<!--<PackageReference Include="System.Reflection.MetadataLoadContext" Version="6.0.0" />-->
 	</ItemGroup>
 
 	<!--<Target Name="PostBuild" AfterTargets="PostBuildEvent">
@@ -45,6 +51,7 @@
 
 	<!--<Target Name="CopyTargetToPublish" AfterTargets="PostBuildEvent">-->
 	<Target Name="CopyTargetToPublish" AfterTargets="ILRepack">
+		
 		<Copy SourceFiles="$(TargetPath)" DestinationFolder="$(SolutionDir)Publish\">
 			<Output TaskParameter="CopiedFiles" ItemName="Copied" />
 		</Copy>
