--- a/Version/Universe.Version.csproj
+++ b/Version/Universe.Version.csproj
@@ -1,9 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<Version>2.8</Version>
-		<TargetFramework>netstandard2.0</TargetFramework>
-		<PlatformTarget>AnyCPU</PlatformTarget>
+		<Version>2.12</Version>
+		<TargetFramework>net6.0</TargetFramework>
+		<PlatformTarget>x64</PlatformTarget>
+		<OutputType>Exe</OutputType>
 		<OutputPath>bin\$(Configuration)\$(PlatformTarget)\</OutputPath>
 
 		<!--<TargetFramework>net6.0</TargetFramework>-->
