--- a/Version/Universe.Version.csproj
+++ b/Version/Universe.Version.csproj
@@ -1,33 +1,44 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+	<!-- 어셈블리/패키지 기본 정보 -->
 	<PropertyGroup>
-		<Version>2.9</Version>
-		<TargetFramework>netstandard2.0</TargetFramework>
-		<PlatformTarget>AnyCPU</PlatformTarget>
-		<OutputPath>bin\$(Configuration)\$(PlatformTarget)\</OutputPath>
-
-		<!--<TargetFramework>net6.0</TargetFramework>-->
 		<RootNamespace>Universe.Version</RootNamespace>
 		<AssemblyName>$(RootNamespace)</AssemblyName>
-		<!--<OutputType>Library</OutputType>-->
+		<VersionPrefix>1.3</VersionPrefix>
+		<VersionSuffix></VersionSuffix>
+		<SourceRevisionId></SourceRevisionId>
+	</PropertyGroup>
 
-		<AssemblyVersin>$(Version)</AssemblyVersin>
-		<FileVersin>$(Version)</FileVersin>
+	<!-- 출력 타겟 -->
+	<PropertyGroup>
+		<TargetFramework>netstandard2.0</TargetFramework>
+		<OutputType>Library</OutputType>
+		<UseWindowsForms>true</UseWindowsForms>
+		<UseWPF>false</UseWPF>
+		<Configurations>Debug;Release</Configurations>
+		<Platform>AnyCPU</Platform>
+		<PlatformTarget>$(Platform)</PlatformTarget>
+		<!--<OutDir>D:\DrBAE\Universe\CodeBaseMainApp</OutDir>-->
+	</PropertyGroup>
+
+	<PropertyGroup>
+		<LangVersion>12.0</LangVersion>
+		<Nullable>enable</Nullable>
+		<WarningsAsErrors>CS8600;CS8602;CS8603;CS8625;CS8604</WarningsAsErrors>
+		<ImplicitUsings>disable</ImplicitUsings>
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+
+		<!--<GenerateAssemblyInfo>true</GenerateAssemblyInfo>-->
+		<AutoGenerateBindingRedirects>True</AutoGenerateBindingRedirects>
+		<Deterministic>true</Deterministic>
+
 		<!--<PublishSingleFile>true</PublishSingleFile>-->
 		<!--<SelfContained>false</SelfContained>-->
 		<!--<RuntimeIdentifier>win-x64</RuntimeIdentifier>-->
 		<!--<PublishReadyToRun>true</PublishReadyToRun>-->
-		<GenerateAssemblyInfo>true</GenerateAssemblyInfo>
-		<Deterministic>true</Deterministic>
-
 	</PropertyGroup>
 
-	<PropertyGroup>
-		<LangVersion>10.0</LangVersion>
-		<Nullable>enable</Nullable>
-		<WarningsAsErrors>CS8600;CS8602;CS8603;CS8625;CS8604</WarningsAsErrors>
-	</PropertyGroup>
-
+	<!-- 패키지 추가 정보 -->
 	<PropertyGroup>
 		<Company>UniverseSoft</Company>
 		<Product>Universe.Version</Product>
@@ -36,20 +47,17 @@
 		<Copyright>Copyright (c) 2021 UniverseSoft</Copyright>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<ProduceReferenceAssembly>False</ProduceReferenceAssembly>
+		<GeneratePackageOnBuild>False</GeneratePackageOnBuild>
+		<PackageOutputPath>..\publish</PackageOutputPath>
+		<DebugType>embedded</DebugType>
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <None Remove="ILRepack.targets" />
-	</ItemGroup>
-
-	<ItemGroup>
-		<PackageReference Include="Microsoft.Build.Utilities.Core" Version="17.2.0" />
-		<PackageReference Include="NodaTime" Version="3.1.0" Condition="$(Configuration) == 'Debug'" />
+		<PackageReference Include="Microsoft.Build.Utilities.Core" Version="17.8.3" />
+		<PackageReference Include="NodaTime" Version="3.1.9" Condition="'$(Configuration)' == 'Debug'" />
 	</ItemGroup>
 
 	<Target Name="CopyTargetToPublish" AfterTargets="PostBuildEvent">
-	<!--<Target Name="CopyTargetToPublish" AfterTargets="ILRepack">-->
-		
 		<Copy SourceFiles="$(TargetPath)" DestinationFolder="$(SolutionDir)Publish\">
 			<Output TaskParameter="CopiedFiles" ItemName="Copied" />
 		</Copy>
