--- a/Version/Universe.Version.csproj
+++ b/Version/Universe.Version.csproj
@@ -4,7 +4,7 @@
 	<PropertyGroup>
 		<RootNamespace>Universe.Version</RootNamespace>
 		<AssemblyName>$(RootNamespace)</AssemblyName>
-		<VersionPrefix>1.4</VersionPrefix>
+		<VersionPrefix>1.7</VersionPrefix>
 		<VersionSuffix></VersionSuffix>
 		<SourceRevisionId></SourceRevisionId>
 	</PropertyGroup>
@@ -55,6 +55,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Build.Utilities.Core" Version="17.8.3" />
+		<!--<PackageReference Include="NuGet.Versioning" Version="6.9.1" />-->
 		<PackageReference Include="NodaTime" Version="3.1.9" Condition="'$(Configuration)' == 'Debug'" />
 	</ItemGroup>
 
